--- a/metadata.yaml
+++ b/metadata.yaml
@@ -47,6 +47,7 @@ subjects:
 - !lcsh 'Mythology, Norse'
 - !lcsh 'Legends -- Iceland'
 - !lcc 'PT'
+- GITenberg
 title: 'The Story Of Gunnlaug The Worm-Tongue And Raven The Skald
 
   1875'
